# uscf-history

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  uschess_history.py
src/uscf/: __init__.py  __main__.py
src/uscf/adapters/: __init__.py
src/uscf/adapters/inbound/: __init__.py  cli.py
src/uscf/adapters/outbound/: __init__.py  json_writer.py  stderr_reporter.py  uscf_api.py
src/uscf/application/: __init__.py  ports.py  use_cases.py
src/uscf/domain/: __init__.py  errors.py  game.py  models.py  page.py  player_history.py
tests/: test_use_cases.py
