[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uscf-history"
version = "1.0.0"
description = "Fetch complete US Chess game history for a player."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.scripts]
uscf = "uscf.adapters.inbound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
